Slides added to lecture 1

--- a/lecture1/lecture1.html
+++ b/lecture1/lecture1.html
@@ -111,6 +111,36 @@ https://www.kent.ac.uk/learning/resources/studyguides/planningandwritingessays.p
 - Read a good daily newspaper  - Financial Times &amp; Economist
 
 - Prepare for seminars – Use them to test your understanding of the lecture
+
+---
+
+&lt;img src="./lecture1_files/figure-html/gdp_per_capita_time.svg" width="100%"/&gt;
+
+---
+
+&lt;img src="./lecture1_files/figure-html/gdp_per_capita_time_recent.svg" width="100%"/&gt;
+
+
+---
+
+.pull-left[
+## Inequality
+
+]
+
+.pull-right[
+&lt;img src="./lecture1_files/figure-html/Global-inequality-in-1800-1975-and-2015.png" width="70%"/&gt;
+]
+
+---
+
+## Key Concepts
+
+- **Institutions:** laws and social customs governing the production and distribution of goods and services 
+
+- **Capitalism:** an economics system where the main institutios are private property, markets, and firms
+
+-
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
