--- a/lecture1/lecture1.html
+++ b/lecture1/lecture1.html
@@ -20,7 +20,7 @@ class: center, middle, inverse, title-slide
 <hr color='#EB811B' size=1px width=796px>
 </html>
 ### İlhan Güner | University of Kent
-### EC566: 2019-12-03
+### EC566 | Macroeconomics for Business
 
 ---
 
@@ -113,13 +113,56 @@ https://www.kent.ac.uk/learning/resources/studyguides/planningandwritingessays.p
 - Prepare for seminars – Use them to test your understanding of the lecture
 
 ---
+### Measuring income and living standards
 
-&lt;img src="./lecture1_files/figure-html/gdp_per_capita_time.svg" width="100%"/&gt;
+- Gross Domestic Product (GDP) = A measure of total income and output of the economy in a given period.
+Usually expressed in per-capita terms (as an average income).
+
+- GDP per capita ≠ Disposable income
+
+- Disposable income = Total income – taxes + government transfers
+
+- Both are imperfect measures of well-being
+
 
 ---
+## GDP per capita over time
 
-&lt;img src="./lecture1_files/figure-html/gdp_per_capita_time_recent.svg" width="100%"/&gt;
+&lt;center&gt;
+&lt;img src="./lecture1_files/figure-html/gdp_per_capita_time.svg" width="80%"/&gt;
+&lt;/center&gt;
+---
 
+## Timing of growth
+
+- Growth take-off occurred at different points in time for different countries:
+ - Britain was the first country to experience sustained economic growth. It began around 1650.
+ - In Japan, it occurred around 1870.
+ - The kink for China and India happened in the second half of the 20th century. 
+
+- In some economies, substantial improvements in people’s living standards did not occur until they gained independence from colonial rule or interference by European nations.
+
+
+---
+## Britain: first to sustained economic growth
+
+&lt;center&gt;
+&lt;img src="./lecture1_files/figure-html/gdp_per_capita_1650_1850.svg" width="70%"/&gt;
+&lt;/center&gt;
+
+---
+## Sustained growth in Japan occurred around 1870
+
+&lt;center&gt;
+&lt;img src="./lecture1_files/figure-html/gdp_per_capita_time_recent.svg" width="70%"/&gt;
+&lt;/center&gt;
+
+---
+## The kink for China and India happened in the second half of the 20th century
+
+&lt;center&gt;
+&lt;img src="./lecture1_files/figure-html/gdp_per_capita_india_china_focus.svg" width="70%"/&gt;
+&lt;/center&gt;
 
 ---
 
@@ -131,6 +174,7 @@ https://www.kent.ac.uk/learning/resources/studyguides/planningandwritingessays.p
 .pull-right[
 &lt;img src="./lecture1_files/figure-html/Global-inequality-in-1800-1975-and-2015.png" width="70%"/&gt;
 ]
+
 
 ---
 
