Added business cycle

--- a/lecture1/lecture1.html
+++ b/lecture1/lecture1.html
@@ -165,7 +165,32 @@ Usually expressed in per-capita terms (as an average income).
 &lt;/center&gt;
 
 ---
+## Business Cycles
 
+.pull-left[
+#### Trend
+&lt;center&gt;
+&lt;img src="./lecture1_files/figure-html/UK-gdp-trend.svg" width="100%"/&gt;
+&lt;/center&gt;
+
+]
+
+.pull-right[
+#### Cycle
+&lt;center&gt;
+&lt;img src="./lecture1_files/figure-html/UK-gdp-cycle.svg" width="85%"/&gt;
+&lt;/center&gt;
+
+]
+
+---
+## Peak and trough of a business cycle
+&lt;center&gt;
+&lt;img src="./lecture1_files/figure-html/UK-gdp-trend_recession.svg" width="70%"/&gt;
+&lt;/center&gt;
+
+
+---
 .pull-left[
 ## Inequality
 
@@ -174,6 +199,7 @@ Usually expressed in per-capita terms (as an average income).
 .pull-right[
 &lt;img src="./lecture1_files/figure-html/Global-inequality-in-1800-1975-and-2015.png" width="70%"/&gt;
 ]
+
 
 
 ---
