Price setting behavior added to lecture 2

--- a/lecture2/lecture2.html
+++ b/lecture2/lecture2.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" lang="" xml:lang="">
+<html>
   <head>
     <title>Lecture 2: Firms and Employees</title>
-    <meta charset="utf-8" />
+    <meta charset="utf-8">
     <meta name="author" content="İlhan Güner | University of Kent" />
     <link href="libs/remark-css/default.css" rel="stylesheet" />
     <link href="libs/remark-css/rladies.css" rel="stylesheet" />
@@ -237,8 +237,356 @@ Questions:
 &lt;img src="./lecture2_files/figure-html/Slide8.JPG" width="100%"/&gt;
 &lt;/center&gt;
 ]
+
+
+---
+
+class: inverse, center, middle
+name: price_setting
+
+# Price Setting Firms
+
+&lt;html&gt;&lt;div style='float:left'&gt;&lt;/div&gt;&lt;hr color='#EB811B' size=1px width=796px&gt;&lt;/html&gt;
+
+---
+
+## Firm decisions
+.pull-left[
+
+- What to produce
+
+- How to produce
+
+- Wages 
+
+- Advertising budget
+
+- R&amp;D budget
+
+- _How much to produce_
+
+- _At what price to sell_
+
+- ...
+]
+
+.pull-right[
+&lt;center&gt;
+&lt;img src="./lecture2_files/figure-html/new_yorker.jpg" width="120%"/&gt;
+&lt;/center&gt;
+Source: New Yorker
+
+]
+---
+## Pricing and production decisions
+
+- Relevant for firms selling differentiated products or firms with market power?
+
+ - More on this later
+ 
+ 
+- Depends on
+
+ - Cost structure
+
+ - Market demand
+ 
+- Analyze pricing and production decisions
+
+ 1. Represent cost structure as cost function
+ 
+ 2. Using cost function, draw isocost curves
+ 
+ 3. Repersent market demands as demand function
+ 
+ 4. Using isocost curves and market demand, find the profit maximizing price and output combination
+
+---
+## Cost Structure
+
+### Understanding economies of scale
+
+- Increasing returns to scale (Economies of scale):
+
+ - `\(xF(K,AL) &lt; F(xK,xAL)\)`
+
+ - If inputs increase by a given proportion, output increases more than proportionally
+
+- Constant returns to scale:
+
+ - `\(xF(K,AL) = F(xK,xAL)\)`
+
+ - If inputs increase by a given proportion, output increases proportionally
+ 
+- Decreasing returns to scale (Diseconomies of scale):
+
+ - `\(xF(K,AL) &gt; F(xK,xAL)\)`
+
+ - If inputs increase by a given proportion, output increases less than proportionally
+
+---
+## Economies of scale
+
+
+.pull-left[
+Potential causes
+
+- Fixed cost of production
+
+- Learning by doing
+
+- Greater bargaining power
+
+- Network effects
+
+
+## Diseconomies of scale
+
+Potential causes
+
+- Additional layer of bureaucracy
+
+- Harder to minotor employees
+
+- Necessity of other departments
+
+]
+
+.pull-right[
+&lt;center&gt;
+&lt;img src="./lecture2_files/figure-html/new_yorker2.jpg" width="120%"/&gt;
+&lt;/center&gt;
+Source: New Yorker
+
+]
+
+---
+### Total cost of production and average cost of production
+
+.pull-left[
+- Total cost of production, `\(C(Q)\)`:
+
+ - total cost of producing `\(Q\)` amount of output
+
+- Average cost of production = `\(C(Q)/Q\)`
+
+]
+
+.pull-right[
+
+&lt;center&gt;
+&lt;img src="./lecture2_files/figure-html/figure-07-06-a.jpg" width="90%"/&gt;
+&lt;/center&gt;
+]
+
+---
+
+### Total cost of production and average cost of production
+
+.pull-left[
+- Total cost of production, `\(C(Q)\)`:
+
+ - total cost of producing `\(Q\)` amount of output
+
+- Average cost of production = `\(C(Q)/Q\)`
+
+- `\(F:\)` fixed cost of production
+
+]
+
+.pull-right[
+
+&lt;center&gt;
+&lt;img src="./lecture2_files/figure-html/figure-07-06-b.jpg" width="90%"/&gt;
+&lt;/center&gt;
+]
+
+---
+
+### Total cost of production and average cost of production
+
+.pull-left[
+
+- Total cost of production, `\(C(Q)\)`:
+
+ - total cost of producing `\(Q\)` amount of output
+
+- Average cost of production = `\(C(Q)/Q\)`
+
+- `\(F:\)` fixed cost of production
+
+ - Leads to increasing returns to scale
+ 
+ - Average cost of production is decreasing when `\(Q\)` is low (when `\(Q&lt;40\)` in our example graph)
+]
+
+.pull-right[
+
+&lt;center&gt;
+&lt;img src="./lecture2_files/figure-html/figure-07-06-e.jpg" width="90%"/&gt;
+&lt;/center&gt;
+]
+
+
+---
+### Total cost of production and average cost of production
+
+.pull-left[
+- Total cost of production, `\(C(Q)\)`:
+
+ - total cost of producing `\(Q\)` amount of output
+
+- Average cost of production = `\(C(Q)/Q\)`
+
+- `\(F:\)` fixed cost of production
+
+ - Leads to increasing returns to scale
+ 
+ - Average cost of production is decreasing when `\(Q\)` is low (when `\(Q&lt;40\)` in our example graph)
+
+- After certain amount of production, diseconomies of scale forces dominate, and average cost increases 
+]
+
+.pull-right[
+
+&lt;center&gt;
+&lt;img src="./lecture2_files/figure-html/figure-07-06-g.jpg" width="90%"/&gt;
+&lt;/center&gt;
+]
+
+---
+## Marginal cost of production
+
+.pull-left[
+- Derivative of the total cost function, `\(MC\equiv\frac{dC(Q)}{dQ}=C'(Q)\)`
+ 
+- Slope of the total cost curve at a given point point
+
+- The effect on total cost of producing one more unit of output
+
+- In this example, `\(MC\)` is increasing in `\(Q\)`
+
+- `\(AC\)` is decreasing if `\(AC&lt;MC\)`
+
+- `\(AC\)` is incresing if `\(AC&gt;MC\)`
+
+- `\(AC\)` is at its minimum if `\(AC=MC\)`
+]
+
+.pull-right[
+&lt;center&gt;
+&lt;img src="./lecture2_files/figure-html/Slide8_7.jpg" width="100%"/&gt;
+&lt;/center&gt;
+]
+---
+## Isocost curves
+.pull-left[
+- Profit = Revenue - Cost 
+
+$$
+\pi = PQ-C(Q)=Q(P-AC)
+$$
+- An isocost curve represents all the price and quantity compbinations which lead to same level of profit
+
+- MC curve intersect with each isocost curve at its lowest point
+
+- Average cost curve represents the 0 profit isocost curve
+
+]
+.pull-right[
+&lt;center&gt;
+&lt;img src="./lecture2_files/figure-html/Slide25.JPG" width="120%"/&gt;
+&lt;/center&gt;
+]
+
+
+---
+## Production
+
+.pull-left[
+- Production takes place at the 
+
+- Demand curve = Firm’s feasible frontier 
+  
+  (slope = MRT)
+
+- Isoprofit curves = Firm’s indifference curves
+
+ (slope = MRS)
+
+- Firm maximizes profits by choosing point where
+
+   MRS = MRT 
+
+]
+.pull-right[
+&lt;center&gt;
+&lt;img src="./lecture2_files/figure-html/Slide26.JPG" width="120%"/&gt;
+&lt;/center&gt;
+]
+
+
+---
+## Profit Maximization
+
+.pull-left[
+
+- Marginal revenue `\((MR)\)` = change in revenue from selling an aditional unit of output
+
+$$ 
+MR = \frac{dP(Q)Q}{dQ}
+$$
+- Profit is maximized when `\(MR = MC\)` 
+]
+.pull-right[
+&lt;center&gt;
+&lt;img src="./lecture2_files/figure-html/Slide27.JPG" width="100%"/&gt;
+&lt;/center&gt;
+]
+
+---
+## Welfare analysis
+
+.pull-left[
+- Consumer surplus `\((CS)\)`: total difference between willingness to pay and actual price
+
+- Producer surplus `\((PS)\)`: total difference between `\(MC\)` and actual price
+
+- Total surplus (total gains from trade) = `\(CS + PS\)`
+
+- Deadweight loss: A loss of gains from trade relative to the pareto optimal allocation `\(MC=P\)`
+]
+.pull-right[
+&lt;center&gt;
+&lt;img src="./lecture2_files/figure-html/Slide29.JPG" width="100%"/&gt;
+&lt;/center&gt;
+]
+
+---
+## Price elasticity of demand
+
+.pull-left[
+
+
+]
+.pull-right[
+&lt;center&gt;
+&lt;img src="./lecture2_files/figure-html/Slide18.JPG" width="100%"/&gt;
+&lt;/center&gt;
+]
+---
+## Price elasticity and market power
+.pull-left[
+&lt;center&gt;
+&lt;img src="./lecture2_files/figure-html/Slide19.JPG" width="100%"/&gt;
+&lt;/center&gt;
+]
+.pull-right[
+&lt;center&gt;
+&lt;img src="./lecture2_files/figure-html/Slide20.JPG" width="100%"/&gt;
+&lt;/center&gt;
+]
     </textarea>
-<style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
 <script>var slideshow = remark.create({
 "ratio": "16:9",
@@ -249,59 +597,12 @@ Questions:
 if (window.HTMLWidgets) slideshow.on('afterShowSlide', function (slide) {
   window.dispatchEvent(new Event('resize'));
 });
-(function(d) {
-  var s = d.createElement("style"), r = d.querySelector(".remark-slide-scaler");
+(function() {
+  var d = document, s = d.createElement("style"), r = d.querySelector(".remark-slide-scaler");
   if (!r) return;
   s.type = "text/css"; s.innerHTML = "@page {size: " + r.style.width + " " + r.style.height +"; }";
   d.head.appendChild(s);
-})(document);
-
-(function(d) {
-  var el = d.getElementsByClassName("remark-slides-area");
-  if (!el) return;
-  var slide, slides = slideshow.getSlides(), els = el[0].children;
-  for (var i = 1; i < slides.length; i++) {
-    slide = slides[i];
-    if (slide.properties.continued === "true" || slide.properties.count === "false") {
-      els[i - 1].className += ' has-continuation';
-    }
-  }
-  var s = d.createElement("style");
-  s.type = "text/css"; s.innerHTML = "@media print { .has-continuation { display: none; } }";
-  d.head.appendChild(s);
-})(document);
-// delete the temporary CSS (for displaying all slides initially) when the user
-// starts to view slides
-(function() {
-  var deleted = false;
-  slideshow.on('beforeShowSlide', function(slide) {
-    if (deleted) return;
-    var sheets = document.styleSheets, node;
-    for (var i = 0; i < sheets.length; i++) {
-      node = sheets[i].ownerNode;
-      if (node.dataset["target"] !== "print-only") continue;
-      node.parentNode.removeChild(node);
-    }
-    deleted = true;
-  });
-})();
-// adds .remark-code-has-line-highlighted class to <pre> parent elements
-// of code chunks containing highlighted lines with class .remark-code-line-highlighted
-(function(d) {
-  const hlines = d.querySelectorAll('.remark-code-line-highlighted');
-  const preParents = [];
-  const findPreParent = function(line, p = 0) {
-    if (p > 1) return null; // traverse up no further than grandparent
-    const el = line.parentElement;
-    return el.tagName === "PRE" ? el : findPreParent(el, ++p);
-  };
-
-  for (let line of hlines) {
-    let pre = findPreParent(line);
-    if (pre && !preParents.includes(pre)) preParents.push(pre);
-  }
-  preParents.forEach(p => p.classList.add("remark-code-has-line-highlighted"));
-})(document);</script>
+})();</script>
 
 <script>
 (function() {
@@ -315,8 +616,8 @@ if (window.HTMLWidgets) slideshow.on('afterShowSlide', function (slide) {
 </script>
 
 <script>
-slideshow._releaseMath = function(el) {
-  var i, text, code, codes = el.getElementsByTagName('code');
+(function() {
+  var i, text, code, codes = document.getElementsByTagName('code');
   for (i = 0; i < codes.length;) {
     code = codes[i];
     if (code.parentNode.tagName !== 'PRE' && code.childElementCount === 0) {
@@ -330,8 +631,7 @@ slideshow._releaseMath = function(el) {
     }
     i++;
   }
-};
-slideshow._releaseMath(document);
+})();
 </script>
 <!-- dynamically load mathjax for compatibility with self-contained -->
 <script>
