--- a/lecture1/lecture1.html
+++ b/lecture1/lecture1.html
@@ -210,7 +210,52 @@ Usually expressed in per-capita terms (as an average income).
 
 - **Capitalism:** an economics system where the main institutios are private property, markets, and firms
 
--
+- 
+
+---
+## Philips Curve
+
+&lt;center&gt;
+&lt;img src="./lecture1_files/figure-html/philips_curve_1960s.svg" width="50%"/&gt;
+&lt;/center&gt;
+
+---
+
+## Philips Curve
+
+&lt;center&gt;
+&lt;img src="./lecture1_files/figure-html/philips_curve_1970s.svg" width="50%"/&gt;
+&lt;/center&gt;
+
+
+---
+
+## Philips Curve
+
+&lt;center&gt;
+&lt;img src="./lecture1_files/figure-html/philips_curve_1980s.svg" width="50%"/&gt;
+&lt;/center&gt;
+
+---
+## Philips Curve
+
+&lt;center&gt;
+&lt;img src="./lecture1_files/figure-html/philips_curve_1990s.svg" width="50%"/&gt;
+&lt;/center&gt;
+
+---
+## Philips Curve
+
+&lt;center&gt;
+&lt;img src="./lecture1_files/figure-html/philips_curve_2000s.svg" width="50%"/&gt;
+&lt;/center&gt;
+
+---
+## Philips Curve
+
+&lt;center&gt;
+&lt;img src="./lecture1_files/figure-html/philips_curve_2010s.svg" width="50%"/&gt;
+&lt;/center&gt;
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
