--- a/lecture1/lecture1.html
+++ b/lecture1/lecture1.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" lang="" xml:lang="">
+<html>
   <head>
     <title>Lecture 1: Introduction</title>
-    <meta charset="utf-8" />
+    <meta charset="utf-8">
     <meta name="author" content="İlhan Güner | University of Kent" />
     <link href="libs/remark-css/default.css" rel="stylesheet" />
     <link href="libs/remark-css/rladies.css" rel="stylesheet" />
@@ -25,8 +25,15 @@ class: center, middle, inverse, title-slide
 ---
 
 
+## Welcome back!
+
+&lt;center&gt;
+&lt;img src="./lecture1_files/figure-html/phd112219s.gif" width="80%"/&gt;
+&lt;/center&gt;
 
 
+
+---
 ## EC566: Macroeconomics for Business
 
 &lt;br&gt;
@@ -83,6 +90,8 @@ https://www.kent.ac.uk/learning/resources/studyguides/planningandwritingessays.p
 
 ## Coursework Essays - Topics 
 
+&lt;br&gt;
+
 - The lists of essay topics will be available in Moodle
 
 - One essay to be chosen out of three topics in Week 19 
@@ -95,22 +104,26 @@ https://www.kent.ac.uk/learning/resources/studyguides/planningandwritingessays.p
 
 - Start thinking and preparing early
 
-- Get consultation and guidance  - make use of our office hours
+- Get consultation and guidance  - make use of my office hours
 
 ---
 
 ## Key factors for success:
 
-- Read the core texts: 
+
+&lt;br&gt;
+
+
+- Read the core text: 
 
  - In addition to core text, you may also use additional recommended text books
 
-- Read the Module Outline: 
- - Contains key information on  lecture, seminars and essay topics for the Spring  term.
+- Prepare for seminars – Use them to test your understanding of the lecture
+
 
 - Read a good daily newspaper  - Financial Times &amp; Economist
 
-- Prepare for seminars – Use them to test your understanding of the lecture
+
 
 ---
 ### Measuring income and living standards
@@ -165,12 +178,26 @@ Usually expressed in per-capita terms (as an average income).
 &lt;/center&gt;
 
 ---
+
+
+&lt;center&gt;
+&lt;img src="./lecture1_files/figure-html/UK-gdp.svg" width="70%"/&gt;
+&lt;/center&gt;
+
+---
+
+
+&lt;center&gt;
+&lt;img src="./lecture1_files/figure-html/UK-gdp-trend.svg" width="70%"/&gt;
+&lt;/center&gt;
+
+---
 ## Business Cycles
 
 .pull-left[
 #### Trend
 &lt;center&gt;
-&lt;img src="./lecture1_files/figure-html/UK-gdp-trend.svg" width="100%"/&gt;
+&lt;img src="./lecture1_files/figure-html/UK-trend.svg" width="100%"/&gt;
 &lt;/center&gt;
 
 ]
@@ -178,7 +205,7 @@ Usually expressed in per-capita terms (as an average income).
 .pull-right[
 #### Cycle
 &lt;center&gt;
-&lt;img src="./lecture1_files/figure-html/UK-gdp-cycle.svg" width="85%"/&gt;
+&lt;img src="./lecture1_files/figure-html/UK-gdp-cycle.svg" width="100%"/&gt;
 &lt;/center&gt;
 
 ]
@@ -188,9 +215,40 @@ Usually expressed in per-capita terms (as an average income).
 &lt;center&gt;
 &lt;img src="./lecture1_files/figure-html/UK-gdp-trend_recession.svg" width="70%"/&gt;
 &lt;/center&gt;
-
+---
+### Unemployment Rate
+&lt;center&gt;
+&lt;iframe src="https://fred.stlouisfed.org/graph/graph-landing.php?g=pRUY&amp;width=950&amp;height=475" scrolling="no" frameborder="0"style="overflow:hidden; width:950px; height:525px;" allowTransparency="true" loading="lazy"&gt;&lt;/iframe&gt;
+&lt;/center&gt;
 
 ---
+
+&lt;center&gt;
+&lt;img src="./lecture1_files/figure-html/UK_productivity.svg" width="70%"/&gt;
+&lt;/center&gt;
+
+---
+&lt;center&gt;
+&lt;img src="./lecture1_files/figure-html/UK_productivity-trend.svg" width="70%"/&gt;
+&lt;/center&gt;
+
+---
+## Real Wage
+
+&lt;center&gt;
+&lt;img src="./lecture1_files/figure-html/real_wages.svg" width="70%"/&gt;
+&lt;/center&gt;
+
+---
+### Monetary Policy
+
+&lt;center&gt;
+&lt;iframe src="https://fred.stlouisfed.org/graph/graph-landing.php?g=oHnd&amp;width=950&amp;height=475" scrolling="no" frameborder="0"style="overflow:hidden; width:950px; height:525px;" allowTransparency="true" loading="lazy"&gt;&lt;/iframe&gt;
+&lt;/center&gt;
+---
+
+
+
 .pull-left[
 ## Inequality
 
@@ -202,15 +260,6 @@ Usually expressed in per-capita terms (as an average income).
 
 
 
----
-
-## Key Concepts
-
-- **Institutions:** laws and social customs governing the production and distribution of goods and services 
-
-- **Capitalism:** an economics system where the main institutios are private property, markets, and firms
-
-- 
 
 ---
 ## Philips Curve
@@ -256,8 +305,21 @@ Usually expressed in per-capita terms (as an average income).
 &lt;center&gt;
 &lt;img src="./lecture1_files/figure-html/philips_curve_2010s.svg" width="50%"/&gt;
 &lt;/center&gt;
+
+
+
+---
+## Fiscal Policy
+&lt;center&gt;
+&lt;img src="./lecture1_files/figure-html/revenue-expenditure-scatter.svg" width="60%"/&gt;
+&lt;/center&gt;
+  
+---
+## Regulation
+&lt;center&gt;
+&lt;img src="./lecture1_files/figure-html/pmr.svg" width="60%"/&gt;
+&lt;/center&gt;
     </textarea>
-<style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
 <script>var slideshow = remark.create({
 "ratio": "16:9",
@@ -268,59 +330,12 @@ Usually expressed in per-capita terms (as an average income).
 if (window.HTMLWidgets) slideshow.on('afterShowSlide', function (slide) {
   window.dispatchEvent(new Event('resize'));
 });
-(function(d) {
-  var s = d.createElement("style"), r = d.querySelector(".remark-slide-scaler");
+(function() {
+  var d = document, s = d.createElement("style"), r = d.querySelector(".remark-slide-scaler");
   if (!r) return;
   s.type = "text/css"; s.innerHTML = "@page {size: " + r.style.width + " " + r.style.height +"; }";
   d.head.appendChild(s);
-})(document);
-
-(function(d) {
-  var el = d.getElementsByClassName("remark-slides-area");
-  if (!el) return;
-  var slide, slides = slideshow.getSlides(), els = el[0].children;
-  for (var i = 1; i < slides.length; i++) {
-    slide = slides[i];
-    if (slide.properties.continued === "true" || slide.properties.count === "false") {
-      els[i - 1].className += ' has-continuation';
-    }
-  }
-  var s = d.createElement("style");
-  s.type = "text/css"; s.innerHTML = "@media print { .has-continuation { display: none; } }";
-  d.head.appendChild(s);
-})(document);
-// delete the temporary CSS (for displaying all slides initially) when the user
-// starts to view slides
-(function() {
-  var deleted = false;
-  slideshow.on('beforeShowSlide', function(slide) {
-    if (deleted) return;
-    var sheets = document.styleSheets, node;
-    for (var i = 0; i < sheets.length; i++) {
-      node = sheets[i].ownerNode;
-      if (node.dataset["target"] !== "print-only") continue;
-      node.parentNode.removeChild(node);
-    }
-    deleted = true;
-  });
-})();
-// adds .remark-code-has-line-highlighted class to <pre> parent elements
-// of code chunks containing highlighted lines with class .remark-code-line-highlighted
-(function(d) {
-  const hlines = d.querySelectorAll('.remark-code-line-highlighted');
-  const preParents = [];
-  const findPreParent = function(line, p = 0) {
-    if (p > 1) return null; // traverse up no further than grandparent
-    const el = line.parentElement;
-    return el.tagName === "PRE" ? el : findPreParent(el, ++p);
-  };
-
-  for (let line of hlines) {
-    let pre = findPreParent(line);
-    if (pre && !preParents.includes(pre)) preParents.push(pre);
-  }
-  preParents.forEach(p => p.classList.add("remark-code-has-line-highlighted"));
-})(document);</script>
+})();</script>
 
 <script>
 (function() {
@@ -334,8 +349,8 @@ if (window.HTMLWidgets) slideshow.on('afterShowSlide', function (slide) {
 </script>
 
 <script>
-slideshow._releaseMath = function(el) {
-  var i, text, code, codes = el.getElementsByTagName('code');
+(function() {
+  var i, text, code, codes = document.getElementsByTagName('code');
   for (i = 0; i < codes.length;) {
     code = codes[i];
     if (code.parentNode.tagName !== 'PRE' && code.childElementCount === 0) {
@@ -349,8 +364,7 @@ slideshow._releaseMath = function(el) {
     }
     i++;
   }
-};
-slideshow._releaseMath(document);
+})();
 </script>
 <!-- dynamically load mathjax for compatibility with self-contained -->
 <script>
